<resources>
    <string name="app_name">PhenoCleaners</string>
    <string name="app_motto">Zero Laundry Worries</string>
    <string name="get_started">Get Started</string>
    <string name="signup">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_account">Log in to your PhenoCleaners Account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="continueWith">Continue With</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_with_us">Create an account with us and forget about your laundry issues</string>
    <string name="fullName">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="not_user">Not a User?</string>
    <string name="signin">Sign In</string>
    <string name="already_user">Already a User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_process">Select Process</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
</resources>