<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/create_an_account"
            android:textColor="#2D424E"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:paddingStart="@dimen/dimen20dp"
            android:paddingEnd="@dimen/dimen20dp"
            android:text="@string/create_with_us"
            android:textColor="#2D424E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_background_signup"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="24dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingTop="17dp"
            android:paddingEnd="24dp"
            android:paddingBottom="17dp"
            android:textSize="@dimen/dimen14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_background_signup"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="24dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="24dp"
            android:paddingTop="17dp"
            android:paddingEnd="24dp"
            android:paddingBottom="17dp"
            android:textSize="@dimen/dimen14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_background_signup"
            android:drawableStart="@drawable/ic_icon"
            android:drawablePadding="24dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingStart="24dp"
            android:paddingTop="17dp"
            android:paddingEnd="24dp"
            android:paddingBottom="17dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/email_password_login_background"
            android:paddingStart="@dimen/dimen20dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_background_signup"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="24dp"
                android:ems="10"
                android:hint="@string/password"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_button_state"
            android:fontFamily="@font/montserrat"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <View
            android:id="@+id/lineView1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="46dp"
            android:background="#2D424E"
            app:layout_constraintEnd_toStartOf="@id/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/or"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/lineView2"
            app:layout_constraintEnd_toStartOf="@id/lineView2"
            app:layout_constraintStart_toEndOf="@id/lineView1"
            app:layout_constraintTop_toTopOf="@id/lineView2"/>

        <View
            android:id="@+id/lineView2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="22dp"
            android:background="#2D424E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/or"
            app:layout_constraintTop_toBottomOf="@id/signup_btn"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_up_with_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="56dp"
            android:paddingEnd="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_with_google">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_user"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:id="@+id/toSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/signin"
                    android:textColor="#59BDF5"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:focusable="true" />
            </LinearLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

