<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phenocleaners.phenocleans.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="48.85dp"
            android:layout_height="64.41dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/phenocleaners_logo" />

        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="#2D424E"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image" />

        <TextView
            android:id="@+id/log_in_to_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/login_to_your_account"
            android:textColor="#2D424E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/email_password_login_background"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log_in_to_account_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_background_signup"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingTop="17dp"
                android:paddingEnd="@dimen/dimen20dp"
                android:paddingBottom="17dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/email_password_login_background"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_background_signup"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="end"
            android:onClick="forgotPassword"
            android:text="@string/forgot_password"
            android:textColor="#59BDF5"
            android:textSize="@dimen/dimen14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <Button
            android:id="@+id/login_btn_to_home"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_button_state"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

        <View
            android:id="@+id/lineView1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="46dp"
            android:background="#2D424E"
            app:layout_constraintEnd_toStartOf="@id/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_to_home" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/or"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/lineView2"
            app:layout_constraintEnd_toStartOf="@id/lineView2"
            app:layout_constraintStart_toEndOf="@id/lineView1"
            app:layout_constraintTop_toTopOf="@id/lineView2"/>

        <View
            android:id="@+id/lineView2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="22dp"
            android:background="#2D424E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/or"
            app:layout_constraintTop_toBottomOf="@id/login_btn_to_home"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_with_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="56dp"
            android:paddingEnd="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_with_google">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_user"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:id="@+id/toSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/signup"
                    android:textColor="#59BDF5"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:focusable="true" />
            </LinearLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>